[package]
name = "ehttp"
version = "0.2.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Minimal HTTP client for both native and WASM"
edition = "2018"
rust-version = "1.65"
homepage = "https://github.com/emilk/ehttp"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/emilk/ehttp"
categories = ["network-programming", "wasm", "web-programming"]
keywords = ["http", "wasm", "native", "web"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
streaming = ["dep:wasm-streams", "dep:futures-util"]
"default" = []
# To support fetch_async on native
"native-async" = ["async-channel"]

[lib]

[dependencies]

# For compiling natively:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# ureq = { version = "2.0", default-features = false, features = ["gzip", "tls_native_certs"] }
ureq = "2.0"
async-channel = { version = "1.8", optional = true }

# For compiling to web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"

# Streaming response
wasm-streams = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }


[dependencies.web-sys]
version = "0.3.52"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "AbortSignal",
  "ReadableStream",
  "Window",
]
