[package]
name = "example_eframe"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Demo of ehttp for both web and native using eframe"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ehttp = { path = "../ehttp", features = ["streaming"] }
eframe = "0.33.3"
log = "0.4.29"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.91", features = ["HtmlCanvasElement"] }
